--- a/research-recherche/meteo-resume-recherche.html
+++ b/research-recherche/meteo-resume-recherche.html
@@ -100,7 +100,7 @@
 
     <p>Le projet d’optimisation météorologique a débuté en juillet 2017. Le bureau météorologique d’Environnement et Changement climatique Canada a réuni une équipe des Communications électroniques et du Service météorologique du Canada. En collaboration avec les concepteurs et les chercheurs du Bureau de la transformation numérique, nous avons entrepris de faire en sorte qu’il soit plus facile pour les Canadiens de comprendre les avis concernant les conditions météorologiques dangereuses.</p>
 
-<h2 id="discovery">Découverte</h2>
+<h2>Découverte</h2>
 
 <p>Nous avons commencé par une phase de découverte afin de comprendre la situation actuelle, les besoins des utilisateurs en ce qui concerne le contenu actuel et les problèmes qu’ils peuvent rencontrer. Les sources étaient notamment l’examen des études antérieures sur la convivialité, l’analyse des habitudes de transmission du site Web et des comportements de recherche, et l’examen des demandes téléphoniques et de soutien technique. Cela nous a donné suffisamment d’indications pour déterminer les publics cibles, nous avons ensuite utilisé ces indications lors de nos discussions avec les personnes touchées par le contenu actuel. Nous avons également effectué des recherches sur les applications météorologiques et comment elles sont utilisées.</p>
 
@@ -130,16 +130,16 @@
 <summary>
 Description détaillée
 </summary>
-<p>[Solutions faisant l’objet d’un vote, lesquelles figurent sur une feuille imprimée]</p>
+<p>Solutions faisant l’objet d’un vote, lesquelles figurent sur une feuille imprimée.</p>
 
 <p>Comment pourrions-nous assurer une meilleure correspondance aux attentes concernant les icônes? (Les gens les ont beaucoup touchés!) </p>
 <p>Tâche 2 et tâche 3 : 24 heures. Task 6: Tâche 6 : Facteur humidex nuit-jour.</p>
 
 
-<p>[Les papillons adhésifs sont placés sur le dessus de l’imprimé; les papillons adhésifs sur lesquels figurent des idées semblables sont regroupés.]</p>
+<p>Les papillons adhésifs sont placés sur le dessus de l’imprimé; les papillons adhésifs sur lesquels figurent des idées semblables sont regroupés.</p>
 
-<p>[Regroupement de papillons adhésifs 1]  </p>
-<p>[Il y a 14 points de vote dans ce groupe.] </p>
+<p>Regroupement de papillons adhésifs 1:  </p>
+<p>Il y a 14 points de vote dans ce groupe. </p>
 <ul>
 	<li>rendre l’icône de prévision/le texte d’aujourd’hui ou de ce soir cliquables  </li>
 	<li>texte de ce soir cliquable, format horaire </li>
@@ -151,8 +151,8 @@ Description détaillée
 </ul>
 
 
-<p>[Regroupement de papillons adhésifs 2]  </p>
-<p>[Il y a deux points de vote dans ce groupe.]</p>
+<p>Regroupement de papillons adhésifs 2:  </p>
+<p>Il y a deux points de vote dans ce groupe.</p>
 <ul>
 <li>les icônes sont une représentation très simpliste de la météo</li>
 <li>faire en sorte que l’icône actuelle soit animée</li>
@@ -162,14 +162,14 @@ Description détaillée
 <br>
 
 
-<h2 id="">Établissement d’une référence</h2>
+<h2>Établissement d’une référence</h2>
 
 <p>Avant d’apporter des modifications, nous avons établi un score de référence grâce à la mise à l’essai modérée de la convivialité. Seize participants ont assisté aux séances de recherche tenues à Toronto, à Gatineau, à Montréal et à Ottawa avec leur téléphone intelligent en anglais ou en français. Des essais à distance ont été menés auprès de quatre autres participants utilisant leur ordinateur de bureau. Le recrutement était axé sur les utilisateurs qui occupaient un emploi ou des travailleurs autonomes à temps plein à l’extérieur de leur domicile. On a demandé aux participants de réaliser les sept scénarios de tâches sur le site Web Canada.ca. </p>
 
 <p>Nous avons regardé ensemble des vidéos des séances d’essais. Ces vidéos ont aidé toute l’équipe à comprendre les problèmes rencontrés par les utilisateurs lorsqu’ils essayaient d’accomplir les tâches. Nous pourrions observer et quantifier les comportements et les problèmes de convivialité qui ont causé  l'échec de l'exécution de la tâche. Nous avons saisi ces observations sous la forme d’un parcours de clics (pour comprendre comment les gens se sont déplacés sur le site) et décrit les problèmes en détail afin que nous puissions les aborder pendant la phase de conception.</p>
 
 
-<h2 id="">Restructuration visant à améliorer le taux de réussite des tâches</h2>
+<h2>Restructuration visant à améliorer le taux de réussite des tâches</h2>
 
 <p>En ce qui concerne l’essai de référence, le taux global de repérabilité était de 35 %, et le taux global de réussite était de 33 % pour les sept tâches et les 140 essais de tâches.
 </p>
