--- a/research-recherche/impots-resume-recherche.html
+++ b/research-recherche/impots-resume-recherche.html
@@ -230,7 +230,7 @@ Description détaillée
 			</tr><tr><td>7. Retenues sur la paie : quand effectuer un versement </td>
 				<td  >76 %</td>
 				<td>96 %</td>
-			</tr><tr><td>8. Retenues sur la paie : cotisations maximales au RPC </td>
+			</tr><tr><td>8. Retenues sur la paie : cotisations maximales au <abbr title="Régime de pensions du Canada">RPC</abbr> </td>
 				<td  >80 %</td>
 				<td>83 %</td>
 			</tr><tr><td>9. <abbr title="taxe sur les produits et services">TPS</abbr> : date du versement (premier) </td>
