--- a/research-recherche/taxfiling-research-summary.html
+++ b/research-recherche/taxfiling-research-summary.html
@@ -223,7 +223,7 @@ Detailed description
 			</tr><tr><td>7. Payroll: When to remit </td>
 				<td  >76%</td>
 				<td>96%</td>
-			</tr><tr><td>8. Payroll: Max CPP contributions </td>
+			</tr><tr><td>8. Payroll: Max <abbr title="Canada Pension Plan">CPP</abbr> contributions </td>
 				<td  >80%</td>
 				<td>83%</td>
 			</tr><tr><td>9. <abbr title="Goods and Services Tax">GST</abbr>: Remit date (first time) </td>
