--- a/research-recherche/meteo-resume-recherche.html
+++ b/research-recherche/meteo-resume-recherche.html
@@ -248,13 +248,13 @@ La page « Nouvelle version » est également animée et défile jusqu’à la f
 
 <p>Ce graphique montre les taux de réussite de l’exécution de la tâche dans l’ensemble de la référence et de la mise à l’essai de validation remanié du prototype pour l’ensemble des 40 participants :</p>
 
-<div itemprop="text" class="" data="type-text">
-      <div class="img-responsive center-block hidden-sm hidden-xs">
-          <span class=""><img src="../images/weather-meteo/Baseline_vs_Validation_Success_resultats.jpg" alt="graphique qui illustre les résultats de la base de référence et de la restructuration" width="800px" />
-       </span>
+</div>
+</div>
+<div class="col-md-12">
 
-       </div>
-
+<img class="img-responsive hidden-sm hidden-xs" src="../images/weather-meteo/Baseline_vs_Validation_Success_resultats.jpg" alt="graphique qui illustre les résultats de la base de référence et de la restructuration" />
+</div>
+<div class="row col-md-9">
 			 <details>
 			 <summary>
 			 Taux de réussite des tâches – tableau
