--- a/research-recherche/weather-research-summary.html
+++ b/research-recherche/weather-research-summary.html
@@ -247,12 +247,13 @@ The "Redesign" page is also animated, and scrolls to just underneath the Current
 
 <p>This chart shows the task completion success rates across the baseline and redesigned validation test on the prototype for all 40 participants:</p>
 
-<div itemprop="text" class="" data="type-text">
-      <div class="img-responsive center-block hidden-sm hidden-xs">
-          <span class=""><img src="../images/weather-meteo/Baseline_vs_Validation_Success_results.jpg" alt="image-of-chart-showing-baseline-and-final-test-results" width="800px" />
-       </span>
+</div>
+</div>
+<div class="col-md-12">
 
-       </div>
+<img class="img-responsive hidden-sm hidden-xs" src="../images/weather-meteo/Baseline_vs_Validation_Success_results.jpg" alt="Image of chart showing baseline and final test results" />
+</div>
+<div class="row col-md-9">
 
 			 <details>
 			 <summary>
