--- a/research-recherche/meteo-resume-recherche.html
+++ b/research-recherche/meteo-resume-recherche.html
@@ -252,7 +252,7 @@ La page « Nouvelle version » est également animée et défile jusqu’à la f
 </div>
 <div class="col-md-12">
 
-<img class="img-responsive hidden-sm hidden-xs" src="../images/weather-meteo/Baseline_vs_Validation_Success_resultats.jpg" alt="graphique qui illustre les résultats de la base de référence et de la restructuration" />
+<img class="img-responsive hidden-sm hidden-xs" src="../images/weather-meteo/Baseline_vs_Validation_Success_resultats.jpg" alt="Graphique qui illustre les résultats de la base de référence et de la restructuration." />
 </div>
 <div class="row col-md-9">
 			 <details>
