--- a/research-recherche/weather-research-summary.html
+++ b/research-recherche/weather-research-summary.html
@@ -251,7 +251,7 @@ The "Redesign" page is also animated, and scrolls to just underneath the Current
 </div>
 <div class="col-md-12">
 
-<img class="img-responsive hidden-sm hidden-xs" src="../images/weather-meteo/Baseline_vs_Validation_Success_results.jpg" alt="Image of chart showing baseline and final test results" />
+<img class="img-responsive hidden-sm hidden-xs" src="../images/weather-meteo/Baseline_vs_Validation_Success_results.jpg" alt="Image of chart showing baseline and final test results." />
 </div>
 <div class="row col-md-9">
 
