--- a/pages/apercu-projet.html
+++ b/pages/apercu-projet.html
@@ -255,12 +255,13 @@
 														<li class="custli">C'est un hiver enneigé dimanche matin et vous devez vous rendre à Kingston en auto pour une réunion lundi midi. Devriez-vous partir ce soir ou demain matin?</li>
 														<li class="custli">Vous faites du camping et vous entendez dire qu’il est possible qu’il grêle. La grêle ferait des trous dans votre tente, et vous avez payé cher pour celle-ci. La rumeur est-elle vraie?</li>
 														<li class="custli">Y a-t-il des endroits dans la région d’Ottawa où il pleut déjà (oui/non)? Vous essayez de déterminer si vous avec le temps de faire une courte promenade avec le chien.</li>
+														<li class="custli">Vous dirigez la partie de soccer des enfants ce soir. Vous devez annuler l’activité si l’humidex dépasse 40 degrés. Vous l’annulez ou non?</li>
 														<li class="custli">Vous êtes le gestionnaire d’un terrain de golf à Ottawa – le ciel est sombre et il y a aujourd'hui un tournoi majeur. Déterminez (oui/non) si vous devriez évacuer le terrain en raison de risques d’éclairs dans les 10 à 20 minutes.</li>
 														</ul>
 
 																		<br>
 
-<!-- <p><a href="#">Apprenez la façon dont nous l’avons fait.</a></p> -->
+<p><a href="../research-recherche/meteo-resume-recherche.html">Apprenez la façon dont nous l’avons fait.</a></p>
 
 																		</div>
 																		</section>
