--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -262,12 +262,13 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 														<li class="custli">It's Sunday morning, and you need to drive to Kingston for a Monday noon meeting. Should you leave this evening, or tomorrow morning?</li>
 														<li class="custli">Hail would rip holes in your expensive tent. Should you rush to pack up your camp site this morning or take your time this evening?</li>
 														<li class="custli">You want to take the the dog for a short walk before it rains. It is already raining anywhere in the Ottawa area yet (yes/no)?</li>
+														<li class="custli">You are coaching children's soccer tonight. You have to cancel if the humidex is above 40 degrees. Should you cancel the game or not?</li>
 														<li class="custli">You are the golf course manager: the sky looks dark. Find out (yes/no) whether you should clear the course because of the potential of lightning in the next 10-20 minutes.</li>
 														</ul>
 
 																		<br>
 
-<!-- <p><a href="#">Learn how we did it.</a></p> -->
+<p><a href="../research-recherche/weather-research-summary.html">Learn how we did it.</a></p>
 
 																		</div>
 																		</section>
@@ -342,7 +343,7 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 																<br>
 
-	<p><a href="https://canada-ca.github.io/research-summaries/diseases-research-summary.html"><span class="wb-inv">Diseases and immunization: </span>Learn how we did it.</a></p> 
+	<p><a href="https://canada-ca.github.io/research-summaries/diseases-research-summary.html"><span class="wb-inv">Diseases and immunization: </span>Learn how we did it.</a></p>
 
 																</div>
 																</section>
