--- a/pages/projectoverview.html
+++ b/pages/projectoverview.html
@@ -392,19 +392,24 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 																						<div>
 
-																	<ul class="custul">
-																	<li class="custli">Can you pay your company's payroll <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Employment Insurance">EI</abbr> deductions to <abbr title="Canada Revenue Agency"> CRA</abbr> using Interac?</li>
-																	<li class="custli">You issued an invoice, with <abbr title="Goods and Services Tax">GST</abbr> included, on the last day of the quarter. Can you wait until the invoice is paid before sending in your payment?</li>
-																	<li class="custli">You accidentally made an error when you submitted your last payroll return. You under-paid your source deductions to <abbr title="Canada Revenue Agency"> CRA</abbr> by $350. Will you get fined?</li>
-																	<li class="custli">If your Ontario company sells and ships a taxable product to a customer in Alberta, do you charge them <abbr title="Goods and Services Tax">GST</abbr> or <abbr title="Harmonized Sales Tax">HST</abbr>?</li>
-																	<li class="custli">You mailed a cheque to pay your company’s payroll deductions. How would you confirm that the <abbr title="Canada Revenue Agency">CRA</abbr> received it?</li>
-																	<li class="custli">You registered for <abbr title="Goods and Services Tax">GST</abbr> for the first time on August 31, and will file your return annually. Your fiscal year ended October 31. Your net tax for September and October was $2,500. Will you need to pay your <abbr title="Goods and Services Tax">GST</abbr> in instalments for the next fiscal year?</li>
-																	<li class="custli">Your business operates seasonally, so you don't pay employees during the winter. Do you need to let <abbr title="Canada Revenue Agency"> CRA</abbr> know this?</li>
-																						</ul>
+																							<ul class="custul">
+																							<li class="custli">Can you pay your company's payroll <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Employment Insurance">EI</abbr> deductions to <abbr title="Canada Revenue Agency"> CRA</abbr> using Interac?</li>
+																							<li class="custli">You issued an invoice, with <abbr title="Goods and Services Tax">GST</abbr> included, on the last day of the quarter. Can you wait until the invoice is paid before sending in your payment?</li>
+																							<li class="custli">You accidentally made an error when you submitted your last payroll return. You under-paid your source deductions to <abbr title="Canada Revenue Agency"> CRA</abbr> by $350. Will you get fined?</li>
+																							<li class="custli">If your Ontario company sells and ships a taxable product to a customer in Alberta, do you charge them <abbr title="Goods and Services Tax">GST</abbr> or <abbr title="Harmonized Sales Tax">HST</abbr>?</li>
+																							<li class="custli">You mailed a cheque to pay your company’s payroll deductions. How would you confirm that the <abbr title="Canada Revenue Agency">CRA</abbr> received it?</li>
+																							<li class="custli">You registered for <abbr title="Goods and Services Tax">GST</abbr> for the first time on August 31, and will file your return annually. Your fiscal year ended October 31. Your net tax for September and October was $2,500. Will you need to pay your <abbr title="Goods and Services Tax">GST</abbr> in instalments for the next fiscal year?</li>
+																							<li class="custli">
+																						 A business collects taxes from its employees’ pay. It sends the taxes it has collected to the government 4 times a year. When must it send the next payment by?
+																						 </li>
+																						  <li class="custli">In 2018, what will be the maximum amount of <abbr title="Canada Pension Plan">CPP</abbr> contributions you can deduct from an employee's pay?</li>
+																							 <li class="custli">You have recently registered for a <abbr title="Goods and Services Tax">GST</abbr> account and have been collecting <abbr title="Goods and Services Tax/Harmonized Sales Tax">GST/HST</abbr>. How would you find out when you have to pay it?</li>
+																							<li class="custli">Your business operates seasonally, so you don't pay employees during the winter. Do you need to let <abbr title="Canada Revenue Agency">CRA</abbr> know this?</li>
+																												</ul>
 
 																						<br>
 
-<!--		<p><a href="#">Learn how we did it.</a></p> -->
+<p><a href="../research-recherche/taxfiling-research-summary.html">Learn how we did it.</a></p>
 
 																						</div>
 																						</section>
