--- a/research-recherche/taxfiling-research-summary.html
+++ b/research-recherche/taxfiling-research-summary.html
@@ -271,8 +271,8 @@ Detailed description
 
 <ul>
 
-<li><a href="#">See the updated XXXX pages</a> based on the new designs in this project</li>
-<li><a href="#">CRA and TBS collaborate to optimize GST/HST and Payroll webpage content</a>, a guest post by our optimization partners at <abbr title="Canada Revenue Agency">CRA</abbr></li>
+<!-- <li><a href="#">See the updated XXXX pages</a> based on the new designs in this project</li>
+<li><a href="#">CRA and TBS collaborate to optimize GST/HST and Payroll webpage content</a>, a guest post by our optimization partners at <abbr title="Canada Revenue Agency">CRA</abbr></li> -->
 <li><a href="https://canada-ca.github.io/pages/projectoverview.html">Read overviews of other projects</a> with our partners</li>
 
 </ul>
