--- a/pages/Canada.ca-Update-Authorization-and-Release.html
+++ b/pages/Canada.ca-Update-Authorization-and-Release.html
@@ -40,9 +40,9 @@
 I forever release TBS from any liability from direct, indirect, special, incidental or consequential damages of any kind arising from the use of my name, photograph, video and/or audio recording, likeness, artwork, profile and/or testimonial.
 I have read and fully understood the terms and legal effects of this agreement.
 </p>
- 
-	<p>Notice:
+ 	<p>Notice:
 Personal information, as defined in section 3 of the Privacy Act, R.S.C. 1985, c.P-21, is subject to the provisions of the Privacy Act and the Access to Information Act, R.S.C. 1985, c.A-1. The information will be stored in Personal Information Bank (PIB) TBS PSU 914.
+<p><a href="https://ca.surveygizmo.com/s3/50033936/Canada-caUpdatetoDepartments">Return to registration page</a></p>
 </p>
 </body>
 </html>
