--- a/pages/Canada.ca-miseajour-Autorisationetrenonciation.html
+++ b/pages/Canada.ca-miseajour-Autorisationetrenonciation.html
@@ -34,14 +34,14 @@
 		<main role="main" property="mainContentOfPage" class="container">
 <h1>Autorisation et renonciation</h1>
 <h2>&Eacute;vénement : Mise à jour sur Canada.ca à l’intention des ministères, Ottawa</h2>
+<h3>Jeudi le 27 septembre 2018</h3>
 	<p>
  Moi j’accorde à Sa Majesté la Reine du Canada, qui est représentée par le président du Secrétariat du Conseil du Trésor du Canada (SCT), le droit d’utiliser, de modifier, d’adapter, d’exposer, de publier, de transmettre, de reproduire et de créer des oeuvres dérivées à partir de photographies, de bandes vidéo et/ou audio, de ressemblances, tout ouvrage, les oeuvres d’art, mon profil et/ou mon témoignage dans du matériel élaboré par le SCT ou en son nom, d’en faire la distribution ou d’utiliser mon nom, ce qui comprend, mais sans s’y limiter, des publications actuelles et futures, les sites Web, des enregistrements vidéo et/ou audio visant à promulguer et à appuyer la mission du SCT pour utilisation interne ou diffusion publique.
 Je décharge à vie le SCT de toute responsabilité de dommages-intérêts directs, indirects, spéciaux, fortuits ou consécutifs découlant de l’utilisation de mon nom, de mes photographies, d’enregistrements vidéo et/ou audio, de ressemblances, d’oeuvres d’art, de mon profil et/ou de mon témoignage.
 J’ai lu et je comprends entièrement la terminologie et les effets juridiques de la présente entente. 
 </p>
- 
-	<p>Avis :
-Les renseignements personnels, tels que définis à l’article 3 de la Loi sur la protection des renseignements personnels, L.R.C. 1985, ch. P-21, sont assujettis aux dispositions de la Loi sur la protection des renseignements personnels et de la Loi sur l’accès à l’information, L.R.C. 1985, ch. A-1. Les renseignements seront stockés dans le fichier de renseignements personnels (FRP) SCT PSU 914.
+ <p>Avis :Les renseignements personnels, tels que définis à l’article 3 de la Loi sur la protection des renseignements personnels, L.R.C. 1985, ch. P-21, sont assujettis aux dispositions de la Loi sur la protection des renseignements personnels et de la Loi sur l’accès à l’information, L.R.C. 1985, ch. A-1. Les renseignements seront stockés dans le fichier de renseignements personnels (FRP) SCT PSU 914.
 </p>
+<p><a href="https://ca.surveygizmo.com/s3/50033936/MiseajoursurCanada-caalintentiondesministeres">Retour à la page d'inscription</a></p>
 </body>
 </html>
