--- a/research-recherche/caregiving-research-summary.html
+++ b/research-recherche/caregiving-research-summary.html
@@ -145,21 +145,21 @@ padding-top: 10px;
 <br>
 <figure>
 <img class="img-responsive" alt="Before and after images of “apply” guidance for EI caregiving benefits." src="../images/caregiving-prochesaidants/before-after.jpg"/>
-<figcaption><small>How and when to remit source deductions page at baseline and after redesign for validation </small></figcaption>
+<figcaption><small>Before and after images of “apply” guidance for EI caregiving benefits </small></figcaption>
 </figure>
 <br>
 
 
 <details>
 <summary>
-Detailed description - needs to be written for EI img
+Detailed description
 </summary>
 <br>
-<p>Two webpages are shown side by side. The page on the left is labelled "Baseline" and shows that the “How and when to remit source deductions” webpage on Canada.ca was extremely long when the project started.  An arrow points to the webpage with the annotation "Page was too long for people to find their answer."</p>
+<p>Two webpages are shown side by side. The page on the left is labelled "Baseline" and shows that the “After you've applied” webpage concerning caregiving benefits was missing content people expected to find on this page.  An arrow points to the webpage with the annotation "Supporting documents were not found here."</p>
 
-<p>The page on the right is labelled "Redesign” and shows the “How and when to pay (remit) source deductions” page with 5 steps: 1. Overview, 2. Due dates, 3. Make a payment (remittance) 4. Confirm payment (remittance) received and More information.  An arrow points to the steps with the annotation "Tasks grouped into steps made them easy to scan."  </p>
+<p>The page on the right is labelled "Redesign” and shows the “Apply" page with a set of icons outlining the various application steps.  An arrow points to the steps with the annotation "Visual overview of the complete process."  </p>
 
-<p>The image shows the much simpler and shorter content of tab 3. Make a payment (remittance). At the bottom of the page is a button with the text “Make your payment”. An arrow points to the button with the annotation "Buttons draw attention to the main action on the page."</p>
+<p>Below there is a header titled "Begin to gather supportung documents", which has a list of the needed documents. An arrow points to the list with the annotation "All required supporting documents visible."</p>
 
 </details>
 
