--- a/research-recherche/caregiving-research-summary.html
+++ b/research-recherche/caregiving-research-summary.html
@@ -144,7 +144,7 @@ padding-top: 10px;
 
 <br>
 <figure>
-<img class="img-responsive" alt="Before and after images of “apply” guidance for EI caregiving benefits." src="../images/caregiving-prochesaidants/before-after.jpg"/>
+<img class="img-responsive" alt="Before and after images of “apply” guidance for EI caregiving benefits." src="../images/caregiving-prochesaidants/caregiving-before-after.png"/>
 <figcaption><small>Before and after images of “apply” guidance for EI caregiving benefits </small></figcaption>
 </figure>
 <br>
