--- a/research-recherche/caregiving-research-summary.html
+++ b/research-recherche/caregiving-research-summary.html
@@ -159,7 +159,7 @@ Detailed description
 
 <p>The page on the right is labelled "Redesign” and shows the “Apply" page with a set of icons outlining the various application steps.  An arrow points to the steps with the annotation "Visual overview of the complete process."  </p>
 
-<p>Below there is a header titled "Begin to gather supportung documents", which has a list of the needed documents. An arrow points to the list with the annotation "All required supporting documents visible."</p>
+<p>Below there is a header titled "Begin to gather supporting documents", which has a list of the needed documents. An arrow points to the list with the annotation "All required supporting documents visible."</p>
 
 </details>
 
