--- a/research-recherche/caregiving-research-summary.html
+++ b/research-recherche/caregiving-research-summary.html
@@ -254,7 +254,7 @@ Detailed description
 
 <ul>
 
-<li><a href="https://www.canada.ca/en/services/benefits/ei/caregiving.html">See the updated Family and caregiving benefits pages</a> based on the new designs in this project</li>
+<li><a href="https://www.canada.ca/en/services/benefits/ei/caregiving.html">See the updated Caregiving benefits and leave pages</a> based on the new designs in this project</li>
 <li><a href="https://canada-ca.github.io/pages/projectoverview.html">Read overviews of other projects</a> with our partners</li>
 
 </ul>
