add objectives to update page

--- a/pages/projectoverview-update.html
+++ b/pages/projectoverview-update.html
@@ -484,13 +484,13 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 			<h4>Objective</h4>
 
-			<p>#.</p>
+			<p>Minimize the risks to Canadians from food, health products, vehicles and car seats.</p>
 
 
 			<h4>Why this work matters</h4>
 
 			<ul>
-			<li class="custli">#</li>
+			<li class="custli">There are thousands of recalls every year</li>
 			</ul>
 			<br>
 
@@ -546,13 +546,13 @@ Sometimes the words we use, and how we organize them, can make it hard for peopl
 
 			<h4>Objective</h4>
 
-			<p>#.</p>
+			<p>Make it easier for small businesses to create and update account information.</p>
 
 
 			<h4>Why this work matters</h4>
 
 			<ul>
-			<li class="custli">#</li>
+			<li class="custli">More than 50% of Canadian small business have fewer than 4 employees</li>
 			</ul>
 			<br>
 
