update FR content

--- a/research-recherche/caregiving-research-summary.html
+++ b/research-recherche/caregiving-research-summary.html
@@ -238,6 +238,8 @@ Detailed description
 
 <li>Content was located where people expected it to be </li>
 
+<li>Clarified and simplified language helped people understand the content</li>
+
 </ol>
 
 <h2>Request the research </h2>
