--- a/research-recherche/prochesaidants-resume-recherche.html
+++ b/research-recherche/prochesaidants-resume-recherche.html
@@ -130,43 +130,44 @@ padding-top: 10px;
 
 <h2>Restructuration visant à améliorer la réussite des tâches</h2>
 
-<p>The project evaluated the effectiveness of labels in the Canada.ca menu. Analytics data showed that Canadians use the word “leave” to search for EI special benefits, not “EI” or “benefits.” Introducing the word “caregiving” also helped Canadians identify the right links to follow.
+<p>Le projet a évalué l’efficacité des étiquettes dans le menu Canada.ca. Les données analytiques montrent que les Canadiens utilisent le mot « congé » pour chercher des prestations spéciales d’AE, et non « AE » ou « prestations ». L’introduction du mot « proches aidants » a aussi aidé les Canadiens à trouver les bons liens à suivre.
 </p>
 
-<p>The team decided to bring the three different caregiving benefits together into a single service template. We used a table to highlight the distinctions between each benefit.
+<p>L’équipe a décidé de regrouper les trois prestations différentes pour proches aidants en un seul modèle de service. Nous avons utilisé un tableau pour mettre en évidence les distinctions entre chaque prestation.
 </p>
 
-<p>In baseline testing participants found differentiating between caring for a child or an adult relatively straightforward. However, they had trouble when they tried to identify whether they needed “compassionate care” or “family caregiver” benefits. </p>
+<p>Au cours des tests initiaux, les participants ont constaté qu’il était relativement simple de faire la distinction entre « prendre soin d’un enfant » et « prendre soin d’un adulte ». Cependant, ils ont eu de la difficulté à déterminer s’ils avaient besoin de « prestations de compassion » ou de « prestations pour proches aidants ». </p>
 
-<p>Another innovation in the optimized prototype was to give an overview of the different steps in the application process. The process includes gathering documentation from employers and from medical professionals. Then applicants must submit these documents to Service Canada. On the live site, this information appeared under “After you’ve applied”. Some participants failed to identify the required documents because they didn’t think to look there. </p>
+<p>Une autre innovation du prototype optimisé consistait à donner un aperçu des différentes étapes du processus de demande. Le processus comprend la collecte de documents auprès des employeurs et des professionnels de la santé. Les demandeurs doivent ensuite présenter ces documents à Service Canada. Sur le site en direct, ces renseignements apparaissent sous « Une fois votre demande présentée ». Certains participants n’ont pas identifié les documents requis parce qu’ils n’ont pas pensé à chercher à cet endroit.   </p>
 
-<p>In the prototype, we put the list of documents at the beginning of the process. Participants were more successful finding what documents they would need to provide. </p>
+<p>Dans le prototype, nous avons mis la liste des documents au début du processus. Les participants réussissaient mieux à trouver les documents qu’ils devaient fournir. </p>
 
 <br>
 <figure>
-<img class="img-responsive" alt="Before and after images of “apply” guidance for EI caregiving benefits." src="../images/caregiving-prochesaidants/caregiving-before-after-FR.jpg"/>
-<figcaption><small>Before and after images of “apply” guidance for EI caregiving benefits </small></figcaption>
+<img class="img-responsive" alt="Images avant et après des lignes directrices pour « présenter une demande » pour les prestations d’AE pour proches aidants." src="../images/caregiving-prochesaidants/caregiving-before-after-FR.jpg"/>
+<figcaption><small>Images avant et après des lignes directrices pour « présenter une demande » pour les prestations d’AE pour proches aidants</small></figcaption>
 </figure>
 <br>
 
 
 <details>
 <summary>
-Detailed description
+Description détaillée
 </summary>
 <br>
-<p>Two webpages are shown side by side. The page on the left is labelled "Baseline" and shows that the “After you've applied” webpage concerning caregiving benefits was missing content people expected to find on this page.  An arrow points to the webpage with the annotation "Supporting documents were not found here."</p>
+<p>Deux pages Web sont affichées côte à côte. La page de gauche portant la mention « Renseignements de base » indique qu’il manque du contenu que les utilisateurs s’attendaient à trouver sur la page Web « Une fois votre demande présentée » concernant les prestations pour proches aidants et congés. Une flèche pointe vers la page Web et est assortie de l’annotation « Les documents requis n’ont pas été trouvés ici. »</p>
 
-<p>The page on the right is labelled "Redesign” and shows the “Apply" page with a set of icons outlining the various application steps.  An arrow points to the steps with the annotation "Visual overview of the complete process."  </p>
+<p>La page de droite porte la mention « Révision » et affiche la page « Présenter une demande » avec un ensemble d’icônes décrivant les diverses étapes relatives à la demande. Une flèche pointe vers les étapes et est assortie de l’annotation « Aperçu visuel du processus complet. » </p>
 
-<p>Below there is a header titled "Begin to gather supporting documents", which has a list of the needed documents. An arrow points to the list with the annotation "All required supporting documents visible."</p>
+<p>En dessous, un en-tête intitulé « Commencez à rassembler les documents requis » présente la liste des documents requis. Une flèche pointe vers la liste et est assortie de l’annotation « Tous les documents requis accessibles. »"</p>
 
 </details>
 
 
 <h2>Measuring success rates on the redesigned prototype</h2>
 
-<p>Once the revised prototype was ready, we recruited 17 new participants to complete the same 8 tasks. Our target was either 80% success, or an improvement of at least 20 points over the baseline score for both findability and task success.
+<p>Une fois le prototype révisé prêt, nous avons recruté 17 nouveaux participants pour accomplir les 8 mêmes tâches. Notre objectif était soit un taux de réussite de 80 %, soit une amélioration d’au moins 20 points par rapport à la note initiale pour la repérabilité et la réussite des tâches. Ces objectifs ont été dépassés. Le contenu révisé et la conception ont amélioré le taux de repérabilité, ce dernier passant de 59 % à 84 %. Le taux global de réussite des tâches est passé de 51 % à 79 %.
+
 </p>
 
 <p>These targets were exceeded:</p>
@@ -176,47 +177,49 @@ Detailed description
 	<li>overall task success rose from 51% to 79%</li>
 </ul>
 
-<p>This chart shows the task success rates across the baseline and redesigned validation test on the prototype:</p>
+<p>Ce graphique montre les taux de réussite des tâches dans l’ensemble de la phase initiale et l’essai de validation restructuré du prototype :</p>
 </div>
 </div>
 <div>
-<img class="img-responsive hidden-sm hidden-xs" alt="EI caregiving benefits optimization - task completion success rates (table)" src="../images/caregiving-prochesaidants/caregiving-task-success-chart-FR.jpg"/>
+<img class="img-responsive hidden-sm hidden-xs" alt="Optimisation des prestations d’AE pour proches aidants - taux de réussite d’accomplissement des tâches (tableau)" src="../images/caregiving-prochesaidants/caregiving-task-success-chart-FR.jpg"/>
 
 <div class="row col-md-9">
 	<details>
 			 <summary>
-			  Task completion success rates – table
-			 </summary>
-			 <p>Baseline measurement at start of project, validation on prototype redesigned by project team.</p>
+					 Taux de réussite des tâches – tableau
+				 </summary>
+				 <p>Mesure de base au début du projet, validation sur prototype restructuré par l'équipe de projet.</p>
+					 <div class="table-bravo">
+								 <table class="table table-bordered">
+
+					<thead><tr><th scope="col">Tâche</th>
+					<th scope="col">Base</th>
+					<th scope="col">Validation</th>
 				 <div class="table-bravo">
-				       <table class="table table-bordered">
 
-				<thead><tr><th scope="col">Task</th>
-				<th scope="col">Baseline</th>
-				<th scope="col">Validation</th>
 
-			</tr></thead><tbody><tr><td>1. Eligibility: 600 hours</td>
+			</tr></thead><tbody><tr><td>1. Admissibilité : 600 heures</td>
 				<td  >61%</td>
 				<td>76%</td>
-			</tr><tr><td>2. Apply: documents</td>
+			</tr><tr><td>2. Présenter une demande : documents</td>
 				<td  >41%</td>
 				<td>76%</td>
-			</tr><tr><td>3. Wait period/delay</td>
+			</tr><tr><td>3. Période d’attente/délai</td>
 				<td  >58%</td>
 				<td>100%</td>
-			</tr><tr><td>4. Apply</td>
+			</tr><tr><td>4. Présenter une demande</td>
 				<td  >79%</td>
 				<td>88%</td>
-			</tr><tr><td>5. Compassionate care</td>
+			</tr><tr><td>5. Soutien de compassion</td>
 				<td  >0%</td>
 				<td>88%</td>
-			</tr><tr><td>6. Eligibility: sick person </td>
+			</tr><tr><td>6. Admissibilité : personne malade </td>
 				<td  >67%</td>
 				<td>88%</td>
-			</tr><tr><td>7. Benefit expiry </td>
+			</tr><tr><td>7. Fin des prestations </td>
 				<td  >72%</td>
 				<td>94%</td>
-			</tr><tr><td>8. Eligibility: friend </td>
+			</tr><tr><td>8. Admissibilité : ami </td>
 				<td  >39%</td>
 				<td>88%</td>
 			</tr>
@@ -228,34 +231,35 @@ Detailed description
 </details>
 
 
-<h2>Key drivers of success</h2>
+<h2>Principaux facteurs de réussite</h2>
 
- <p>The team identified four factors that had the greatest impact on success rates: </p>
+ <p>L’équipe a déterminé quatre facteurs qui ont eu le plus grand effet sur les taux de réussite.  </p>
 
 <ol>
 
-<li>Labels and doormats for navigation emphasized “caregiving” in addition to “family”</li>
+<li>Les étiquettes et les liens d’entrée pour la navigation mettaient l’accent sur les « proches aidants » en plus de la « famille »</li>
 
-<li>Three benefits in one place helped people get to correct destination</li>
+<li>Trois prestations en un seul endroit ont aidé les gens à se rendre à la bonne destination</li>
 
-<li>Content was located where people expected it to be </li>
+<li>Le contenu était situé dans l’emplacement attendu</li>
 
+<li>Un langage clair et simplifié a aidé les gens à comprendre le contenu</li>
 </ol>
 
-<h2>Request the research </h2>
+<h2>Demander la recherche</h2>
 
-<p>If you’d like to see the research findings from this project, let us know. Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a>.
+<p>Envoyez-nous un courriel à <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> si vous avez des questions ou si vous souhaitez en savoir davantage sur cette recherche.
 
-<h2>What do you think? </h2>
+<h2>Qu’en pensez-vous? </h2>
 
-<p>Let us know what you think about this project. Tweet using the hashtag #Canadadotca.</p>
+<p>Faites-nous savoir ce que vous pensez de ce projet. Envoyez un gazouillis en utilisant le mot-clic #Canadapointca.</p>
 
-<h2>Explore further </h2>
+<h2>Explorer davantage</h2>
 
 <ul>
 
-<li><a href="https://www.canada.ca/en/services/benefits/ei/caregiving.html">See the updated Caregiving benefits and leave pages</a> based on the new designs in this project</li>
-<li><a href="https://canada-ca.github.io/pages/projectoverview.html">Read overviews of other projects</a> with our partners</li>
+<li><a href="https://www.canada.ca/fr/services/prestations/ae/proches-aidants.html">See the updated Caregiving benefits and leave pages</a> based on the new designs in this project</li>
+<li><a href="https://canada-ca.github.io/pages/apercu-projet.html">Lire des aperçus d’autres projets</a> avec nos partenaires</li>
 
 </ul>
 
