--- a/research-recherche/prochesaidants-resume-recherche.html
+++ b/research-recherche/prochesaidants-resume-recherche.html
@@ -155,26 +155,26 @@ padding-top: 10px;
 Description détaillée
 </summary>
 <br>
-<p>Deux pages Web sont affichées côte à côte. La page de gauche portant la mention « Renseignements de base » indique qu’il manque du contenu que les utilisateurs s’attendaient à trouver sur la page Web « Une fois votre demande présentée » concernant les prestations pour proches aidants et congés. Une flèche pointe vers la page Web et est assortie de l’annotation « Les documents requis n’ont pas été trouvés ici. »</p>
+<p>Deux pages Web sont affichées côte à côte. La page de gauche portant la mention « Version de base » indique qu’il manque du contenu que les utilisateurs s’attendaient à trouver sur la page Web « Une fois votre demande présentée » concernant les prestations pour proches aidants et congés. Une flèche pointe vers la page Web et est assortie de l’annotation « Les documents requis n’ont pas été trouvés ici. »</p>
 
-<p>La page de droite porte la mention « Révision » et affiche la page « Présenter une demande » avec un ensemble d’icônes décrivant les diverses étapes relatives à la demande. Une flèche pointe vers les étapes et est assortie de l’annotation « Aperçu visuel du processus complet. » </p>
+<p>La page de droite porte la mention « Validation » et affiche la page « Présenter une demande » avec un ensemble d’icônes décrivant les diverses étapes relatives à la demande. Une flèche pointe vers les étapes et est assortie de l’annotation « Aperçu visuel du processus complet. » </p>
 
 <p>En dessous, un en-tête intitulé « Commencez à rassembler les documents requis » présente la liste des documents requis. Une flèche pointe vers la liste et est assortie de l’annotation « Tous les documents requis accessibles. »"</p>
 
 </details>
 
 
-<h2>Measuring success rates on the redesigned prototype</h2>
+<h2>Mesure des taux de réussite du nouveau prototype</h2>
 
-<p>Une fois le prototype révisé prêt, nous avons recruté 17 nouveaux participants pour accomplir les 8 mêmes tâches. Notre objectif était soit un taux de réussite de 80 %, soit une amélioration d’au moins 20 points par rapport à la note initiale pour la repérabilité et la réussite des tâches. Ces objectifs ont été dépassés. Le contenu révisé et la conception ont amélioré le taux de repérabilité, ce dernier passant de 59 % à 84 %. Le taux global de réussite des tâches est passé de 51 % à 79 %.
+<p>Une fois le prototype révisé prêt, nous avons recruté 17 nouveaux participants pour accomplir les 8 mêmes tâches. Notre objectif était soit un taux de réussite de 80 %, soit une amélioration d’au moins 20 points par rapport à la note initiale pour la repérabilité et la réussite des tâches.
 
 </p>
 
-<p>These targets were exceeded:</p>
+<p>Ces objectifs ont été dépassés :</p>
 
 <ul>
-	<li>findability rates rose from 59% to 84%</li>
-	<li>overall task success rose from 51% to 79%</li>
+	<li>le taux de repérabilité est passé de 59 % à 84 %</li>
+	<li>le taux global de réussite des tâches est passé de 51 % à 79 %</li>
 </ul>
 
 <p>Ce graphique montre les taux de réussite des tâches dans l’ensemble de la phase initiale et l’essai de validation restructuré du prototype :</p>
@@ -258,7 +258,7 @@ Description détaillée
 
 <ul>
 
-<li><a href="https://www.canada.ca/fr/services/prestations/ae/proches-aidants.html">See the updated Caregiving benefits and leave pages</a> based on the new designs in this project</li>
+<li><a href="https://www.canada.ca/fr/services/prestations/ae/proches-aidants.html">Consultez les pages de prestations pour proches aidants mises à jour</a> en fonction des nouvelles conceptions de ce projet</li>
 <li><a href="https://canada-ca.github.io/pages/apercu-projet.html">Lire des aperçus d’autres projets</a> avec nos partenaires</li>
 
 </ul>
