--- a/research-recherche/caregiving-research-summary.html
+++ b/research-recherche/caregiving-research-summary.html
@@ -89,9 +89,9 @@ padding-top: 10px;
   </header>
 
   <div>
-    <p>Employment Insurance (EI) is a service that touches almost 2 million Canadians every year*. Certain EI benefits are designed specifically for Canadians caring for a critically ill or injured family member, or for someone needing end of life care.</p>
+    <p>Employment Insurance (EI) is a service that touches almost 2 million Canadians every year*. Certain <abbr title="Employment Insurance">EI</abbr> benefits are designed specifically for Canadians caring for a critically ill or injured family member, or for someone needing end of life care.</p>
 
-		<p>The Digital Transformation Office, Service Canada, and Employment and Social Development Canada collaborated to make it easier to find, understand and access those EI benefits. </p>
+		<p>The Digital Transformation Office, Service Canada, and Employment and Social Development Canada collaborated to make it easier to find, understand and access those <abbr title="Employment Insurance">EI</abbr> benefits. </p>
 
 		<p>Improving client service delivery is a top priority on Canada.ca. The team was motivated to help Canadians understand which benefits are available to them and how to apply. Awareness of this motivated the team to improve the information provided on Canada.ca. We researched, designed and tested a new prototype in just over three months. It succeeded in: </p>
 
@@ -128,7 +128,7 @@ padding-top: 10px;
 
 <h2>Redesign to improve task success</h2>
 
-<p>The project evaluated the effectiveness of labels in the Canada.ca menu. Analytics data showed that Canadians use the word “leave” to search for EI special benefits, not “EI” or “benefits.” Introducing the word “caregiving” also helped Canadians identify the right links to follow.
+<p>The project evaluated the effectiveness of labels in the Canada.ca menu. Analytics data showed that Canadians use the word “leave” to search for <abbr title="Employment Insurance">EI</abbr> special benefits, not “<abbr title="Employment Insurance">EI</abbr>” or “benefits.” Introducing the word “caregiving” also helped Canadians identify the right links to follow.
 </p>
 
 <p>The team decided to bring the three different caregiving benefits together into a single service template. We used a table to highlight the distinctions between each benefit.
@@ -143,7 +143,7 @@ padding-top: 10px;
 <br>
 <figure>
 <img class="img-responsive" alt="Before and after images of “apply” guidance for EI caregiving benefits." src="../images/caregiving-prochesaidants/caregiving-before-after.jpg"/>
-<figcaption><small>Before and after images of “apply” guidance for EI caregiving benefits </small></figcaption>
+<figcaption><small>Before and after images of “apply” guidance for <abbr title="Employment Insurance">EI</abbr> caregiving benefits </small></figcaption>
 </figure>
 <br>
 
