--- a/research-recherche/prochesaidants-resume-recherche.html
+++ b/research-recherche/prochesaidants-resume-recherche.html
@@ -91,9 +91,9 @@ padding-top: 10px;
   </header>
 
   <div>
-    <p>L’assurance-emploi (AE) est un service qui touche près de 2 millions de Canadiens chaque année. Certaines prestations d’AE visent particulièrement les Canadiens qui prennent soin d’un membre de leur famille qui est gravement malade ou blessé, ou les personnes ayant besoin de soins de fin de vie.</p>
+    <p>L’assurance-emploi (AE) est un service qui touche près de 2 millions de Canadiens chaque année. Certaines prestations d’<abbr title="assurance-emploi">AE</abbr> visent particulièrement les Canadiens qui prennent soin d’un membre de leur famille qui est gravement malade ou blessé, ou les personnes ayant besoin de soins de fin de vie.</p>
 
-		<p>Le Bureau de la transformation numérique, Service Canada ainsi qu’Emploi et Développement social Canada ont collaboré pour faciliter la recherche, la compréhension et l’accès aux prestations d’AE. </p>
+		<p>Le Bureau de la transformation numérique, Service Canada ainsi qu’Emploi et Développement social Canada ont collaboré pour faciliter la recherche, la compréhension et l’accès aux prestations d’<abbr title="assurance-emploi">AE</abbr>. </p>
 
 		<p>L’amélioration de la prestation des services à la clientèle est une priorité pour Canada.ca. L’équipe était déterminée à aider les Canadiens à comprendre les prestations qui leur sont offertes et la marche à suivre pour présenter une demande. La sensibilisation à ce sujet a motivé l’équipe à améliorer les renseignements fournis sur Canada.ca. Nous avons étudié, conçu et mis à l’essai un nouveau prototype en un peu plus de 3 mois. Ce prototype a réussi à : </p>
 
@@ -130,7 +130,7 @@ padding-top: 10px;
 
 <h2>Restructuration visant à améliorer la réussite des tâches</h2>
 
-<p>Le projet a évalué l’efficacité des étiquettes dans le menu Canada.ca. Les données analytiques montrent que les Canadiens utilisent le mot « congé » pour chercher des prestations spéciales d’AE, et non « AE » ou « prestations ». L’introduction du mot « proches aidants » a aussi aidé les Canadiens à trouver les bons liens à suivre.
+<p>Le projet a évalué l’efficacité des étiquettes dans le menu Canada.ca. Les données analytiques montrent que les Canadiens utilisent le mot « congé » pour chercher des prestations spéciales d’<abbr title="assurance-emploi">AE</abbr>, et non « <abbr title="assurance-emploi">AE</abbr> » ou « prestations ». L’introduction du mot « proches aidants » a aussi aidé les Canadiens à trouver les bons liens à suivre.
 </p>
 
 <p>L’équipe a décidé de regrouper les trois prestations différentes pour proches aidants en un seul modèle de service. Nous avons utilisé un tableau pour mettre en évidence les distinctions entre chaque prestation.
@@ -145,7 +145,7 @@ padding-top: 10px;
 <br>
 <figure>
 <img class="img-responsive" alt="Images avant et après des lignes directrices pour « présenter une demande » pour les prestations d’AE pour proches aidants." src="../images/caregiving-prochesaidants/caregiving-before-after-FR.jpg"/>
-<figcaption><small>Images avant et après des lignes directrices pour « présenter une demande » pour les prestations d’AE pour proches aidants</small></figcaption>
+<figcaption><small>Images avant et après des lignes directrices pour « présenter une demande » pour les prestations d’<abbr title="assurance-emploi">AE</abbr> pour proches aidants</small></figcaption>
 </figure>
 <br>
 
